Makefile的範例實作。

--- a/testConnection/Makefile
+++ b/testConnection/Makefile
@@ -1,7 +1,14 @@
-all: project
+myBody.exe: myBody.o func1.o
+		gcc -o myBody.exe myBody.o func1.o
 
+myBody.o: myBody.c func1.h
+		gcc -c myBody.c
 
-project:	func1.o myBody.o
-	gcc *.o -o a.exe
+func1.o: func1.c func1.h
+		gcc -c func1.c
 
-//Tic大大寫的Makefile#1
+run:
+		myBody.exe
+
+clean:
+		rm *.o
